tune titles and seo ready

--- a/about.html
+++ b/about.html
@@ -3,25 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sina's Multidimensional Leadership Cube | Discover Multidimensional Leadership Dynamics</title>
+    <title>About Sina Ghazi | Innovator and Creator of SMLC</title>
 
     <!-- Meta Tags for SEO -->
-    <meta name="description" content="Explore Sina's Multidimensional Leadership Cube (SMLC) to gain insights into personal, organizational, and societal leadership dynamics.">
-    <meta name="keywords" content="SMLC, Leadership Cube, Multidimensional Leadership, Leadership Model, Organizational Dynamics, Personal Development">
+    <meta name="description" content="Learn more about Sina Ghazi, an innovator and strategist dedicated to enhancing leadership through the Multidimensional Leadership Cube (SMLC).">
+    <meta name="keywords" content="About Sina Ghazi, SMLC creator, leadership expert, innovation, strategy">
     <meta name="author" content="Sina Ghazi">
+    <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#ffffff">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://sinaghazi.com/about.html">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Sina's Multidimensional Leadership Cube">
-    <meta property="og:description" content="Discover a new perspective on leadership dynamics with the SMLC model.">
+    <meta property="og:title" content="About Sina Ghazi | Innovator and Creator of SMLC">
+    <meta property="og:description" content="Learn more about Sina Ghazi, an innovator and strategist dedicated to enhancing leadership through the Multidimensional Leadership Cube (SMLC).">
     <meta property="og:image" content="https://sinaghazi.com/img/og-image.png">
-    <meta property="og:url" content="https://sinaghazi.com">
-    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sinaghazi.com/about.html">
+    <meta property="og:type" content="profile">
+    <meta property="og:site_name" content="Sina Ghazi">
+    <meta property="og:locale" content="en_US">
 
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Sina's Multidimensional Leadership Cube">
-    <meta name="twitter:description" content="Discover a new perspective on leadership dynamics with the SMLC model.">
-    <meta name="twitter:image" content="https://sinaghazi.com/img/twitter-card.png">
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Sina Ghazi",
+            "url": "https://sinaghazi.com/about.html",
+            "image": "https://sinaghazi.com/img/sina-ghazi.jpg",
+            "jobTitle": "Innovator and Strategist",
+            "description": "Sina Ghazi is the creator of the Multidimensional Leadership Cube (SMLC), focusing on enhancing leadership through innovation and strategy.",
+            "worksFor": {
+                "@type": "Organization",
+                "name": "Innovategy Oy"
+            }
+        }
+    </script>
 
     <!-- Favicon -->
     <link rel="icon" href="img/icon/favicon.ico" type="image/x-icon">
