--- a/explore.html
+++ b/explore.html
@@ -3,25 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sina's Multidimensional Leadership Cube | Discover Multidimensional Leadership Dynamics</title>
-
-    <!-- Meta Tags for SEO -->
-    <meta name="description" content="Explore Sina's Multidimensional Leadership Cube (SMLC) to gain insights into personal, organizational, and societal leadership dynamics.">
-    <meta name="keywords" content="SMLC, Leadership Cube, Multidimensional Leadership, Leadership Model, Organizational Dynamics, Personal Development">
+    <title>Explore the Multidimensional Leadership Cube (SMLC)</title>
+    <meta name="description" content="Dive into Sina's Multidimensional Leadership Cube (SMLC) and discover how it can enhance leadership across personal, organizational, and societal levels.">
+    <meta name="keywords" content="Explore, SMLC, Multidimensional Leadership Cube, leadership development, innovation, strategy">
     <meta name="author" content="Sina Ghazi">
+    <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#ffffff">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://sinaghazi.com/explore.html">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Sina's Multidimensional Leadership Cube">
-    <meta property="og:description" content="Discover a new perspective on leadership dynamics with the SMLC model.">
-    <meta property="og:image" content="https://sinaghazi.com/img/og-image.png">
-    <meta property="og:url" content="https://sinaghazi.com">
-    <meta property="og:type" content="website">
+    <meta property="og:title" content="Explore the Multidimensional Leadership Cube (SMLC)">
+    <meta property="og:description" content="Discover how the SMLC can transform leadership practices at all levels.">
+    <meta property="og:image" content="https://sinaghazi.com/img/smlc-diagram.png">
+    <meta property="og:url" content="https://sinaghazi.com/explore.html">
+    <meta property="og:type" content="article">
+    <meta property="og:site_name" content="Sina Ghazi">
+    <meta property="og:locale" content="en_US">
 
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Sina's Multidimensional Leadership Cube">
-    <meta name="twitter:description" content="Discover a new perspective on leadership dynamics with the SMLC model.">
-    <meta name="twitter:image" content="https://sinaghazi.com/img/twitter-card.png">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Explore the Multidimensional Leadership Cube (SMLC)",
+            "image": "https://sinaghazi.com/img/smlc-diagram.png",
+            "author": {
+                "@type": "Person",
+                "name": "Sina Ghazi"
+            },
+            "publisher": {
+                "@type": "Organization",
+                "name": "Sina Ghazi",
+                "logo": {
+                    "@type": "ImageObject",
+                    "url": "https://sinaghazi.com/img/sg-logo-transparent.png"
+                }
+            },
+            "url": "https://sinaghazi.com/explore.html",
+            "datePublished": "2023-10-01",
+            "dateModified": "2023-10-01",
+            "description": "Dive into Sina's Multidimensional Leadership Cube (SMLC) and discover how it can enhance leadership across personal, organizational, and societal levels."
+        }
+    </script>
 
     <!-- Favicon -->
     <link rel="icon" href="img/icon/favicon.ico" type="image/x-icon">
