--- a/index.html
+++ b/index.html
@@ -3,25 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sina's Multidimensional Leadership Cube | Discover Multidimensional Leadership Dynamics</title>
+    <title>Sina Ghazi | Innovator, Strategist, and Leadership Expert</title>
 
     <!-- Meta Tags for SEO -->
-    <meta name="description" content="Explore Sina's Multidimensional Leadership Cube (SMLC) to gain insights into personal, organizational, and societal leadership dynamics.">
-    <meta name="keywords" content="SMLC, Leadership Cube, Multidimensional Leadership, Leadership Model, Organizational Dynamics, Personal Development">
+    <meta name="description" content="Welcome to the official website of Sina Ghazi, creator of the Multidimensional Leadership Cube (SMLC). Explore insights on leadership, innovation, and strategy.">
+    <meta name="keywords" content="Sina Ghazi, leadership, innovation, strategy, Multidimensional Leadership Cube, SMLC, consulting">
     <meta name="author" content="Sina Ghazi">
+    <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#ffffff">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://sinaghazi.com/">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Sina's Multidimensional Leadership Cube">
-    <meta property="og:description" content="Discover a new perspective on leadership dynamics with the SMLC model.">
+    <meta property="og:title" content="Sina Ghazi | Innovator, Strategist, and Leadership Expert">
+    <meta property="og:description" content="Welcome to the official website of Sina Ghazi, creator of the Multidimensional Leadership Cube (SMLC). Explore insights on leadership, innovation, and strategy.">
     <meta property="og:image" content="https://sinaghazi.com/img/og-image.png">
-    <meta property="og:url" content="https://sinaghazi.com">
+    <meta property="og:url" content="https://sinaghazi.com/">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Sina Ghazi">
+    <meta property="og:locale" content="en_US">
 
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Sina's Multidimensional Leadership Cube">
-    <meta name="twitter:description" content="Discover a new perspective on leadership dynamics with the SMLC model.">
-    <meta name="twitter:image" content="https://sinaghazi.com/img/twitter-card.png">
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "url": "https://sinaghazi.com/",
+            "name": "Sina Ghazi",
+            "description": "Official website of Sina Ghazi, creator of the Multidimensional Leadership Cube (SMLC).",
+            "publisher": {
+                "@type": "Person",
+                "name": "Sina Ghazi",
+                "url": "https://sinaghazi.com",
+                "logo": {
+                    "@type": "ImageObject",
+                    "url": "https://sinaghazi.com/img/sg-logo-transparent.png"
+                }
+            }
+        }
+    </script>
 
     <!-- Favicon -->
     <link rel="icon" href="img/icon/favicon.ico" type="image/x-icon">
