--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,25 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sina's Multidimensional Leadership Cube | Discover Multidimensional Leadership Dynamics</title>
-
-    <!-- Meta Tags for SEO -->
-    <meta name="description" content="Explore Sina's Multidimensional Leadership Cube (SMLC) to gain insights into personal, organizational, and societal leadership dynamics.">
-    <meta name="keywords" content="SMLC, Leadership Cube, Multidimensional Leadership, Leadership Model, Organizational Dynamics, Personal Development">
+    <title>Privacy Policy | Sina Ghazi</title>
+    <meta name="description" content="Read the privacy policy for sinaghazi.com to understand how we collect, use, and protect your personal information.">
+    <meta name="keywords" content="Privacy policy, Sina Ghazi, data protection, personal information">
     <meta name="author" content="Sina Ghazi">
+    <meta name="robots" content="noindex, follow">
+    <meta name="theme-color" content="#ffffff">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://sinaghazi.com/privacy-policy.html">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Sina's Multidimensional Leadership Cube">
-    <meta property="og:description" content="Discover a new perspective on leadership dynamics with the SMLC model.">
+    <meta property="og:title" content="Privacy Policy | Sina Ghazi">
+    <meta property="og:description" content="Understand how sinaghazi.com collects, uses, and safeguards your personal data.">
     <meta property="og:image" content="https://sinaghazi.com/img/og-image.png">
-    <meta property="og:url" content="https://sinaghazi.com">
-    <meta property="og:type" content="website">
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Sina's Multidimensional Leadership Cube">
-    <meta name="twitter:description" content="Discover a new perspective on leadership dynamics with the SMLC model.">
-    <meta name="twitter:image" content="https://sinaghazi.com/img/twitter-card.png">
+    <meta property="og:url" content="https://sinaghazi.com/privacy-policy.html">
+    <meta property="og:type" content="article">
+    <meta property="og:site_name" content="Sina Ghazi">
+    <meta property="og:locale" content="en_US">
 
     <!-- Favicon -->
     <link rel="icon" href="img/icon/favicon.ico" type="image/x-icon">
@@ -32,7 +30,6 @@
     <!-- Stylesheets and Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="css/output.css" rel="stylesheet">
-
 
     <!-- Fathom - beautiful, simple website analytics -->
     <script src="https://cdn.usefathom.com/script.js" data-site="ZAOYGYGK" defer></script>
