--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,25 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sina's Multidimensional Leadership Cube | Discover Multidimensional Leadership Dynamics</title>
-
-    <!-- Meta Tags for SEO -->
-    <meta name="description" content="Explore Sina's Multidimensional Leadership Cube (SMLC) to gain insights into personal, organizational, and societal leadership dynamics.">
-    <meta name="keywords" content="SMLC, Leadership Cube, Multidimensional Leadership, Leadership Model, Organizational Dynamics, Personal Development">
+    <meta name="description" content="Review the terms of service for using sinaghazi.com, including user responsibilities and legal agreements.">
+    <meta name="keywords" content="Terms of service, Sina Ghazi, legal, user agreement">
     <meta name="author" content="Sina Ghazi">
+    <meta name="robots" content="noindex, follow">
+    <meta name="theme-color" content="#ffffff">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://sinaghazi.com/terms-of-service.html">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Sina's Multidimensional Leadership Cube">
-    <meta property="og:description" content="Discover a new perspective on leadership dynamics with the SMLC model.">
+    <meta property="og:title" content="Terms of Service | Sina Ghazi">
+    <meta property="og:description" content="Understand the legal terms and conditions for using sinaghazi.com.">
     <meta property="og:image" content="https://sinaghazi.com/img/og-image.png">
-    <meta property="og:url" content="https://sinaghazi.com">
-    <meta property="og:type" content="website">
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Sina's Multidimensional Leadership Cube">
-    <meta name="twitter:description" content="Discover a new perspective on leadership dynamics with the SMLC model.">
-    <meta name="twitter:image" content="https://sinaghazi.com/img/twitter-card.png">
+    <meta property="og:url" content="https://sinaghazi.com/terms-of-service.html">
+    <meta property="og:type" content="article">
+    <meta property="og:site_name" content="Sina Ghazi">
+    <meta property="og:locale" content="en_US">
 
     <!-- Favicon -->
     <link rel="icon" href="img/icon/favicon.ico" type="image/x-icon">
@@ -32,7 +29,6 @@
     <!-- Stylesheets and Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="css/output.css" rel="stylesheet">
-
 
     <!-- Fathom - beautiful, simple website analytics -->
     <script src="https://cdn.usefathom.com/script.js" data-site="ZAOYGYGK" defer></script>
