--- a/index.html
+++ b/index.html
@@ -138,53 +138,141 @@
     </section>
 
     <section id="interactive" class="section bg-secondary py-16">
-        <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-8">Explore the Dimensions of Leadership</h2>
-            <div class="selection-options flex flex-col justify-center space-y-4 mb-8 max-w-xs mx-auto">
-                <button class="selection-btn active flex items-center justify-start px-4 py-2 bg-[#333333] text-white rounded-lg shadow-md hover:bg-[#ff3300] transition-colors duration-300 w-full" data-type="individual">
-                    <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
-                    </svg>
-                    <span class="text-sm">Individual</span>
-                </button>
-                <button class="selection-btn flex items-center justify-start px-4 py-2 bg-white text-[#333333] border border-[#333333] rounded-lg shadow-md hover:bg-[#ff3300] hover:text-white hover:border-[#ff3300] transition-colors duration-300 w-full" data-type="organization">
-                    <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"></path>
-                    </svg>
-                    <span class="text-sm">Organization/Business</span>
-                </button>
-                <button class="selection-btn flex items-center justify-start px-4 py-2 bg-white text-[#333333] border border-[#333333] rounded-lg shadow-md hover:bg-[#ff3300] hover:text-white hover:border-[#ff3300] transition-colors duration-300 w-full" data-type="society">
-                    <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                    </svg>
-                    <span class="text-sm">Society/Country</span>
-                </button>
-            </div>
-            <p class="text-center mb-8">
-                Adjust the sliders below to see how different factors influence leadership styles within the multidimensional cube.
-            </p>
-            <div class="cube-and-controls flex flex-wrap justify-center items-start">
-                <div id="cube-container" class="w-full md:w-1/2 lg:w-2/5 h-96 bg-white border border-gray-300 rounded-lg"></div>
-                <div class="controls w-full md:w-1/2 lg:w-2/5 mt-8 md:mt-0 md:ml-8">
-                    <div class="slider-group mb-6">
-                        <label for="xRange" id="xLabel" class="block mb-2">Individualism vs. Collectivism</label>
-                        <input type="range" id="xRange" name="xRange" min="1" max="5" value="3" step="1" class="w-full">
+            <div class="container mx-auto px-4 max-w-7xl">
+                <h2 class="text-3xl font-bold text-center mb-8">
+                    Explore the Dimensions of Leadership
+                </h2>
+
+                <!-- Main content container -->
+                <div class="lg:flex lg:gap-8">
+                    <!-- Left panel - Controls (1/3 width) -->
+                    <div class="w-full lg:w-1/3 mb-8 lg:mb-0">
+                        <div class="bg-white p-6 rounded-lg shadow-md">
+                            <!-- Level selection buttons -->
+                            <div class="space-y-2 mb-8">
+                                <div class="flex items-center mb-2">
+                                    <div class="w-3 h-3 rounded-full bg-primary mr-2"></div>
+                                    <span class="font-semibold">Primary Position</span>
+                                </div>
+                                <button
+                                        class="selection-btn w-full flex items-center p-3 rounded-lg transition-colors bg-[#333333] text-white"
+                                        data-type="individual"
+                                >
+                                    <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                                    </svg>
+                                    <span>Individual</span>
+                                </button>
+
+                                <button
+                                        class="selection-btn w-full flex items-center p-3 rounded-lg transition-colors bg-white text-[#333333] border border-[#333333]"
+                                        data-type="organization"
+                                >
+                                    <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" />
+                                    </svg>
+                                    <span>Organization/Business</span>
+                                </button>
+
+                                <button
+                                        class="selection-btn w-full flex items-center p-3 rounded-lg transition-colors bg-white text-[#333333] border border-[#333333]"
+                                        data-type="society"
+                                >
+                                    <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                    </svg>
+                                    <span>Society/Country</span>
+                                </button>
+                            </div>
+
+                            <!-- Sliders -->
+                            <div class="space-y-6">
+                                <div class="slider-group">
+                                    <label class="block text-sm font-medium text-gray-700 mb-2" id="xLabel">
+                                        X Axis: Individualism vs. Collectivism
+                                    </label>
+                                    <input
+                                            type="range"
+                                            id="xRange"
+                                            min="1"
+                                            max="5"
+                                            value="3"
+                                            class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
+                                    />
+                                </div>
+
+                                <div class="slider-group">
+                                    <label class="block text-sm font-medium text-gray-700 mb-2" id="yLabel">
+                                        Y Axis: Emotional vs. Rational
+                                    </label>
+                                    <input
+                                            type="range"
+                                            id="yRange"
+                                            min="1"
+                                            max="5"
+                                            value="3"
+                                            class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
+                                    />
+                                </div>
+
+                                <div class="slider-group">
+                                    <label class="block text-sm font-medium text-gray-700 mb-2" id="zLabel">
+                                        Z Axis: Risk-Averse vs. Risk-Taking
+                                    </label>
+                                    <input
+                                            type="range"
+                                            id="zRange"
+                                            min="1"
+                                            max="5"
+                                            value="3"
+                                            class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Comparison Controls -->
+                        <div class="bg-white p-6 rounded-lg shadow-md">
+                            <div class="space-y-2 mb-8">
+                                <div class="flex items-center mb-2">
+                                    <div class="w-3 h-3 rounded-full bg-blue-600 mr-2"></div>
+                                    <span class="font-semibold">Comparison Position</span>
+                                </div>
+
+                                <div class="slider-group">
+                                    <label id="xLabelComparison">X Axis: Individualism vs. Collectivism</label>
+                                    <input type="range" id="xRangeComparison" min="1" max="5" value="3" class="w-full">
+                                </div>
+
+                                <div class="slider-group">
+                                    <label id="yLabelComparison">Y Axis: Emotional vs. Rational</label>
+                                    <input type="range" id="yRangeComparison" min="1" max="5" value="3" class="w-full">
+                                </div>
+
+                                <div class="slider-group">
+                                    <label id="zLabelComparison">Z Axis: Risk-Averse vs. Risk-Taking</label>
+                                    <input type="range" id="zRangeComparison" min="1" max="5" value="3" class="w-full">
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="slider-group mb-6">
-                        <label for="yRange" id="yLabel" class="block mb-2">Emotional vs. Rational</label>
-                        <input type="range" id="yRange" name="yRange" min="1" max="5" value="3" step="1" class="w-full">
-                    </div>
-                    <div class="slider-group mb-6">
-                        <label for="zRange" id="zLabel" class="block mb-2">Risk-Averse vs. Risk-Taking</label>
-                        <input type="range" id="zRange" name="zRange" min="1" max="5" value="3" step="1" class="w-full">
+
+                    <!-- Right panel - Visualization (2/3 width) -->
+                    <div class="w-full lg:w-2/3">
+                        <div class="space-y-8">
+                            <div class="bg-white rounded-lg shadow-md p-4">
+                                <div id="cube-container" class="w-full h-96 bg-white rounded-lg"></div>
+                            </div>
+
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                                <div id="descriptionBox" class="bg-white p-6 rounded-lg shadow-md space-y-4"></div>
+                                <div id="comparisonDescriptionBox" class="bg-white p-6 rounded-lg shadow-md space-y-4"></div>
+                            </div>
+
+                            <div id="comparisonAnalysis" class="bg-white p-6 rounded-lg shadow-md"></div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div id="descriptionBox" class="bg-white p-6 mt-8 text-base leading-relaxed text-gray-700 rounded-lg shadow-md max-w-3xl mx-auto">
-                You are exploring a balanced leadership style that harmonizes individual goals with collective needs,
-                balances emotions with rationality, and approaches risk with caution.
-            </div>
-        </div>
     </section>
 
     <section class="section bg-white py-16">
