--- a/index.html
+++ b/index.html
@@ -1,13 +1,73 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SMLC - Sina's Multidimensional Leadership Cube</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sina Ghazi | Promoting Indigenous-Inspired Leadership and Innovation</title>
+
+  <!-- Meta Tags for SEO -->
+  <meta name="description" content="Welcome to the official website of Sina Ghazi, creator of the Multidimensional Leadership Cube (SMLC). Explore insights on leadership, innovation, and strategy.">
+  <meta name="keywords" content="Sina Ghazi, leadership, innovation, strategy, Multidimensional Leadership Cube, SMLC, consulting">
+  <meta name="author" content="Sina Ghazi">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#ffffff">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://sinaghazi.com/">
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Sina Ghazi | Innovator, Strategist, and Leadership Expert">
+  <meta property="og:description" content="Welcome to the official website of Sina Ghazi, creator of the Multidimensional Leadership Cube (SMLC). Explore insights on leadership, innovation, and strategy.">
+  <meta property="og:image" content="https://sinaghazi.com/img/og-image.png">
+  <meta property="og:url" content="https://sinaghazi.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Sina Ghazi">
+  <meta property="og:locale" content="en_US">
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "url": "https://sinaghazi.com/",
+      "name": "Sina Ghazi",
+      "description": "Official website of Sina Ghazi, creator of the Multidimensional Leadership Cube (SMLC).",
+      "publisher": {
+        "@type": "Person",
+        "name": "Sina Ghazi",
+        "url": "https://sinaghazi.com",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://sinaghazi.com/logo.png"
+        }
+      }
+    }
+  </script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="public/icon/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="public/icon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="public/icon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="public/icon/favicon-16x16.png">
+
+  <!-- Stylesheets and Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Import Map for Modules -->
+  <script type="importmap">
+    {
+      "imports": {
+        "three": "https://cdn.jsdelivr.net/npm/three@0.169.0/build/three.module.js",
+        "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.169.0/examples/jsm/"
+      }
+    }
+  </script>
+
+  <!-- Fathom - beautiful, simple website analytics -->
+  <script src="https://cdn.usefathom.com/script.js" data-site="ZAOYGYGK" defer></script>
+  <!-- / Fathom -->
 </head>
 <body>
 <div id="root"></div>
