refactor: split examples data and update UI text for better clarity

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sina Ghazi | Promoting Indigenous-Inspired Leadership and Innovation</title>
+  <title>SMLC - Multidimensional Leadership Cube | Sina Ghazi</title>
 
   <!-- Meta Tags for SEO -->
-  <meta name="description" content="Welcome to the official website of Sina Ghazi, creator of the Multidimensional Leadership Cube (SMLC). Explore insights on leadership, innovation, and strategy.">
-  <meta name="keywords" content="Sina Ghazi, leadership, innovation, strategy, Multidimensional Leadership Cube, SMLC, consulting">
+  <meta name="description" content="Explore the Multidimensional Leadership Cube (SMLC) - a science-based framework for understanding leadership across Personal, Organizational, and Societal dimensions.">
+  <meta name="keywords" content="SMLC, Multidimensional Leadership Cube, Sina Ghazi, leadership framework, leadership development, organizational leadership">
   <meta name="author" content="Sina Ghazi">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#ffffff">
@@ -16,8 +16,8 @@
   <link rel="canonical" href="https://sinaghazi.com/">
 
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Sina Ghazi | Innovator, Strategist, and Leadership Expert">
-  <meta property="og:description" content="Welcome to the official website of Sina Ghazi, creator of the Multidimensional Leadership Cube (SMLC). Explore insights on leadership, innovation, and strategy.">
+  <meta property="og:title" content="SMLC - Multidimensional Leadership Cube">
+  <meta property="og:description" content="Explore the Multidimensional Leadership Cube (SMLC) - a science-based framework for understanding leadership across Personal, Organizational, and Societal dimensions.">
   <meta property="og:image" content="https://sinaghazi.com/img/og-image.png">
   <meta property="og:url" content="https://sinaghazi.com/">
   <meta property="og:type" content="website">
